# wenuRoute

./: .gitignore  README.md  pyproject.toml  wenuroute.spec  wenuroute_graph.html
.github/: copilot-instructions.md
tests/: test_parsers.py
wenuroute/: __init__.py  analyzer.py  cli.py  graph.py  models.py
wenuroute.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wenuroute/parsers/: __init__.py  android.py  base.py  flutter.py  html.py  nodejs.py  python.py  react.py
